# python3-test

./: .gitignore  .vimrc  Makefile  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
test/: __init__.py  cmath.c  test_assign.py  test_descriptor.py  test_dict.py  test_duck_typing.py  test_env.py  test_extension.py  test_func_metadata.py  test_function.py  test_generator.py  test_import_system.py  test_init_subclass.py  test_metaclass.py  test_next.py  test_oprators.py  test_pickle.py  test_reserved_class_identifiers.py  test_slots.py  test_special_method_name.py  test_tuple.py  todos.md
test/fixtures/version1/lib/: name.py
test/fixtures/version2/lib/: version.py
test/sub/: test_package__path__.py
