[metadata]
name=python3-test
version=1.0

[aliases]
test=pytest

[tool:pytest]
testpaths=test
addopts=-vv -s --tb=long

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
    E127
# up to 88 allowed by bugbear B950
max-line-length = 80
exclude =
    .git
    .pytest_cache
    .eggs
    venv
    __pycache__
    build
    dist

[easy_install]
index_url = https://pypi.tuna.tsinghua.edu.cn/simple

